APP/k8s/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: food-inventory-nodeport
  namespace: food-inventory
  labels:
    app: food-inventory
    component: backend
    env: production
  annotations:
    # 服务质量等级
    service.kubernetes.io/qos-class: "Burstable"
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
      protocol: TCP
      appProtocol: http
    - name: actuator
      port: 8081
      targetPort: actuator
      nodePort: 30081
      protocol: TCP
      appProtocol: http
  selector:
    app: food-inventory
    component: backend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
